--- a/attention.ipynb
+++ b/attention.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -63,14 +63,13 @@
        "torch.Size([4, 8, 2])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# consider the following toy example:\n",
-    "\n",
     "torch.manual_seed(1337)\n",
     "B,T,C = 4,8,2 # batch, time, channels\n",
     "x = torch.randn(B,T,C)\n",
@@ -79,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,10 +92,101 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# version 2: using matrix multiply for a weighted aggregation\n",
+    "wei = torch.tril(torch.ones(T, T))\n",
+    "wei = wei / wei.sum(1, keepdim=True) # weights \n",
+    "xbow2 = wei @ x # (B, T, T) @ (B, T, C) ----> (B, T, C)\n",
+    "torch.allclose(xbow, xbow2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.5000, 0.5000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.3333, 0.3333, 0.3333, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.2500, 0.2500, 0.2500, 0.2500, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.2000, 0.2000, 0.2000, 0.2000, 0.2000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.1667, 0.1667, 0.1667, 0.1667, 0.1667, 0.1667, 0.0000, 0.0000],\n",
+      "        [0.1429, 0.1429, 0.1429, 0.1429, 0.1429, 0.1429, 0.1429, 0.0000],\n",
+      "        [0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250]])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# version 3: use Softmax\n",
+    "import torch.nn.functional as F\n",
+    "tril = torch.tril(torch.ones(T, T))\n",
+    "wei = torch.zeros((T,T))\n",
+    "wei = wei.masked_fill(tril == 0, float('-inf'))\n",
+    "wei = F.softmax(wei, dim=-1)\n",
+    "xbow3 = wei @ x\n",
+    "torch.allclose(xbow, xbow3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch.nn as nn\n",
+    "# version 4: self-attention!\n",
+    "torch.manual_seed(1337)\n",
+    "B,T,C = 4,8,32 # batch, time, channels\n",
+    "x = torch.randn(B,T,C)\n",
+    "\n",
+    "# let's see a single Head perform self-attention\n",
+    "head_size = 16\n",
+    "key = nn.Linear(C, head_size, bias=False)\n",
+    "query = nn.Linear(C, head_size, bias=False)\n",
+    "value = nn.Linear(C, head_size, bias=False)\n",
+    "k = key(x)   # (B, T, 16)\n",
+    "q = query(x) # (B, T, 16)\n",
+    "wei =  q @ k.transpose(-2, -1) # (B, T, 16) @ (B, 16, T) ---> (B, T, T)\n",
+    "\n",
+    "tril = torch.tril(torch.ones(T, T))\n",
+    "#wei = torch.zeros((T,T))\n",
+    "wei = wei.masked_fill(tril == 0, float('-inf'))\n",
+    "wei = F.softmax(wei, dim=-1)\n",
+    "\n",
+    "v = value(x)\n",
+    "out = wei @ v\n",
+    "#out = wei @ x\n",
+    "\n",
+    "out.shape"
+   ]
   }
  ],
  "metadata": {
